--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
 *.arch filter=lfs diff=lfs merge=lfs -text
 *.architecture filter=lfs diff=lfs merge=lfs -text
