--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 certifi==2020.12.5
+click==8.0.3
+joblib==1.1.0
+nltk==3.6.5
 numpy==1.20.3
 pandas==1.2.4
 python-dateutil==2.8.1
 pytz==2021.1
+regex==2021.10.23
 six==1.16.0
 torch==1.8.1
 tqdm==4.61.0
