--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pytorch_beam_search
-version = 1.0
+version = 1.2.1
 author = Juan Ramirez-Orta
 author_email = jarobyte91@gmail.com
 description = A simple library that implements search algorithms for sequence models written in PyTorch. 
@@ -29,6 +29,7 @@ install_requires =
     torch>=1.8.1
     tqdm>=4.61.0
     typing-extensions>=3.10.0.0
+    nltk>=3.6.5
 
 python_requires = >=3.6
 
